# public-chess-experiment

./: .gitignore  README.md  milestone1_local_recreation_instructions.md  pyproject.toml
config/: app.json
src/: build_video.py  fetch_puzzle.py  main.py  metadata.py  puzzle_model.py  render_board.py  state_manager.py
tests/: test_fetch_puzzle.py  test_puzzle_model.py
