[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-chess-experiment"
version = "0.1.0"
description = "Local-first Milestone 1 chess puzzle video pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-chess>=1.999",
    "Pillow>=10.0.0",
    "cairosvg>=2.7.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
